--- a/frontend/RS1_2024_25_angular_template/src/app/modules/admin/students/student-semesters/student-semesters.component.html
+++ b/frontend/RS1_2024_25_angular_template/src/app/modules/admin/students/student-semesters/student-semesters.component.html
@@ -1,6 +1,9 @@
 <p>Student ID : {{student?.id}}</p>
 <p>Student FirstName : {{student?.firstName}}</p>
 <p>Student LastName : {{student?.lastName}}</p>
+
+
+
 <table [dataSource]="dataSource!" class="mat-elevation-z8" mat-table matSort>
 
   <!-- Name Column -->
@@ -26,9 +29,9 @@
     <mat-cell *matCellDef="let semester">{{ semester.obnova }}</mat-cell>
   </ng-container>
 
-  <ng-container matColumnDef="akademskaGodinaStartDate">
+  <ng-container matColumnDef="datumUpisa">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Winter Semester</mat-header-cell>
-    <mat-cell *matCellDef="let semester">{{ semester.akademskaGodinaStartDate }}</mat-cell>
+    <mat-cell *matCellDef="let semester">{{ semester.datumUpisa }}</mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="profesorName">
